cicd/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus-deployment
spec:
  selector:
    matchLabels:
      app: otus-app
  replicas: 2
  template:
      metadata:
        labels:
            app: otus-app
      spec:
        containers:
        - name: otus-app
          image: 30russian/otus:1.0.0
          imagePullPolicy: Always
#          command: ["gunicorn"]
#          args: ["-b", "0.0.0.0:8000", "-t", "1200", "-w", "9", "otus.otus.wsgi"]
          readinessProbe:
            httpGet:
              port: otus-app-web
              path: /health
          ports:
            - name: otus-app-web
              containerPort: 8000
          volumeMounts:
            - mountPath: /opt/otus/app
              name: config
            - mountPath: /opt/otus/postgres
              name: postgres
        volumes:
          - name: config
            configMap:
              name: otus-configmap
              items:
                - key: configFile
                  path: config.json
          - name: postgres
            secret:
              secretName: otus-secret
              items:
                - key: postgresSettings
                  path: config.json
