cicd/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-service
spec:
  selector:
    app: otus-app
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: otus-app-web
