cicd/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /(health|users)(/.*)?$
            pathType: ImplementationSpecific
            backend:
              service:
                name: otus-service
                port:
                  name: web
